--- a/tamagotchi.css
+++ b/tamagotchi.css
@@ -3,6 +3,18 @@ canvas {
   display: block;
 }
 
-body {
+#p5_loading {
   background-color: rgb(100, 100, 100);
+  background-size: cover;
+  position: absolute;
+  top: 0px;
+  width: 100% !important;
+  height: 100% !important;
 }
+/* #myCanvas {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+} */
